updated mobile design

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
           <h2 id="sub">Monthly Subscription</h2>
           <p id="price">
             <span class="dollartag"><b>&dollar;29</b></span
-            ><sup>&nbsp;&nbsp;&nbsp;&nbsp;per month</sup>
+            ><sup>&nbsp;&nbsp;&nbsp;per month</sup> <br />Full access for less
+            than &dollar;1 a day
           </p>
 
-          <p id="PBL">Full access for less than &dollar;1 a day</p>
+          <!-- <p id="PBL">Full access for less than &dollar;1 a day</p> -->
           <button>Sign Up</button>
         </section>
         <section class="bottomright">
